--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/09_terrace/240719_romeo_13.jpg" alt="테라스_색상_4" style="width: 860px; height: auto;" alt="테라스_색상_4">
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/09_terrace/240719_romeo_14jpg" alt="테라스_색상_5" style="width: 860px; height: auto;" alt="테라스_색상_5">
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/09_terrace/240719_romeo_15jpg" alt="테라스_색상_6" style="width: 860px; height: auto;" alt="테라스_색상_6">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Manage/Washing/manage_update.jpg" alt="세탁및관리" style="width: 860px; height: auto;" alt="세탁및관리">
   
 
     
