--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/09_terrace/240719_romeo_15.jpg" alt="테라스_색상_6" style="width: 860px; height: auto;" alt="테라스_색상_6">
 <br><br><br><br>
 
-<img src="https://dameeliving.cafe24.com/Dameeliving/Manage/brand/dameeliving_ending.jpg" alt="다미리빙엔딩" style="width: 860px; height: auto;" alt="다미리빙엔딩">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Manage/brand/dameeliving_ending_240829.jpeg" alt="다미리빙엔딩" style="width: 860px; height: auto;" alt="다미리빙엔딩">
 <br><br><br><br>
 <img src="https://dameeliving.cafe24.com/Dameeliving/Manage/Washing/dameeliving_washing.jpeg" alt="세탁및관리" style="width: 860px; height: auto;" alt="세탁및관리">
   
